# Talky.ai-complete-

./: .env  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  0001_baseline.py  AGENTS.md  API_CONNECTIVITY_AUDIT_REPORT.md  API_CONNECTIVITY_GAP_ANALYSIS.md  AUDIO_PACKETIZATION_FIX_COMPLETE.md  Backend Checklist.md  CALL_ROUTING_FIX_COMPLETE.md  CALL_SYSTEM_WORKING.md  CALL_TEST_READY.md  CHANGELOG.md  DEVELOPER_INTEGRATION_GUIDE.txt  HANDOFF-NEXT-AGENT.md  IMPLEMENTATION_SPEC.md  MAKE_REAL_PBX_CALL_NOW.md  PBX_CALL_PROGRESS_SUMMARY.md  QUICK_START_VOICE_CALL.md  SESSION-RECORD-2026-07-20_21.md  START_TELEPHONY_STACK.md  SYSTEM_READY_MAKE_CALL.md  Telephony_Pipeline_First-Turn_Delay_Investigation_2026-04-16T19-09-37.md  WORKLOG-2026-07-20.md  alembic.ini  alertmanager.yml  ci.yml  comprehensive_audit.py  deploy_to_server.sh  docker-compose.yml  dream_query.py  dream_query2.py  dream_query3.py  dream_schema.py  dream_session1.py  dream_session1b.py  final_verification_test.py  main.py  (+23 more)
backend/: .dockerignore  .env  .env.example  .gitignore  .pyre_configuration  ARCHITECTURE_REVIEW_2026-05-31.md  AUTOMATED_VERIFICATION_CHECKLIST.md  AUTOMATED_VERIFICATION_SUMMARY.md  COMPLETION_SUMMARY.txt  Dockerfile  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_EMAIL_VERIFICATION.md  IMPLEMENTATION_VERIFICATION_REPORT.md  Makefile  README.md  VERIFICATION_GUIDE.md  VERIFICATION_SCRIPTS_CREATED.md  _check_tables.py  alembic.ini  backend_audit.py  docker-compose-freeswitch.yml  prototype_voice_agent.py  pyproject.toml  pyrightconfig.json  pytest.ini  quick_verify.sh  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  send_test_email.py  test_day4_audio_pipeline.py  test_deepgram_connection.py  test_deepgram_realtime.py  test_voice_pipeline.py  testing_deepgram.py  verify_email_system.py  wild-mixing-engelbart.md
backend/Alembic/versions/: 0002_add_refresh_tokens.py  0003_add_stream_events.py  0004_security_events_alert_type.py  0005_tenant_telephony_credentials.py  0006_sip_trunk_test_result.py  0007_mfa_challenge_attempts.py  0008_tenant_ai_configs_voice_tuning.py  0009_dialer_jobs_failure_classification.py  0010_campaign_knowledge.py  0011_campaign_tts_provider.py
backend/app/: __init__.py  main.py
backend/app/api/: operational.py
backend/app/core/: api_security_middleware.py  app_bootstrap.py  config.py  container.py  db.py  db_utils.py  dotenv_compat.py  error_handlers.py  errors.py  jwt_security.py  kms.py  legacy_campaign_audit.py  log_redact.py  postgres_adapter.py  prod_gate.py  rate_limit_keys.py  readiness.py  redis_durability.py  request_id_middleware.py  sd_notify.py  security_headers_middleware.py  sentry_init.py  session_security_middleware.py  telemetry.py  telephony_observability.py  telephony_settings.py  tenant_middleware.py  tenant_rls.py  validation.py  voice_config.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/services/: __init__.py  assistant_agent_service.py  assistant_plan_steps.py  audit_service.py  connector_resolver.py  connector_revocation_service.py  crm_sync_service.py  drive_sync_service.py  email_service.py  meeting_service.py  quota_service.py  replay_protection_service.py  sms_service.py  token_rotation_service.py
backend/app/utils/: audio_utils.py  audit_logger.py  resilience.py  rtp_builder.py  tenant_filter.py
backend/app/workers/: __init__.py  cleanup_worker.py  dialer_worker.py  disposition_policy.py  reminder_worker.py  retry_policy.py  voice_worker.py
backend/config/: development.yaml  google-service-account.json  production.yaml  providers.yaml  sip_config.yaml  vonage_private.key.example
backend/database/: MIGRATIONS.md  complete_schema.sql  fresh_schema.sql  schema.sql  schema_day10.sql  schema_day9.sql  schema_dialer.sql  schema_rls_security.sql  schema_update.sql  seed_data.sql
backend/database/_archive/: add_assistant_agent.sql  add_atomic_call_status.sql  add_crm_drive_sync.sql  add_security_features.sql  add_stripe_billing.sql  (+3 more)
backend/deploy/: healthwatch.sh
backend/docs/: EMAIL_SETUP_QUICK_START.md  IMPLEMENTATION_CHECKLIST.md  LLM_ZERO_TOKENS_FIX.md  MONITORING_LLM_ISSUES.md  PLAN_UPDATE_SUMMARY.md  TESTING_GUIDE.md  Wednesday_10_report.md  api_endpoint_report.md  architectural_review.md  codebase_fixes_report.md  daily_implementation_report_2025_12_30.md  day_eight.md  day_eighteen.md  day_eleven.md  day_fifteen.md  day_five.md  day_forty_eight_stability_audit.md  day_forty_five_voice_pipeline_optimization.md  day_forty_four_systemd_voice_pipeline.md  day_forty_one_voice_orchestrator.md  day_forty_seven_frontend_runtime_and_analytics_stability.md  day_forty_six_postgres_auth_stability.md  day_forty_three_linux_voice_cleanup.md  day_forty_voice_contract_wiring.md  day_four.md  day_fourteen.md  day_nine.md  day_nineteen_tts_streaming.md  day_one.md  day_seven.md  day_seventeen.md  day_six.md  day_sixteen.md  day_ten.md  day_thirteen.md  day_thirty_crm_drive_integration.md  day_thirty_eight_architecture_improvements.md  day_thirty_five_freeswitch_windows.md  day_thirty_four_freeswitch_integration.md  day_thirty_nine_voice_contract.md  (+32 more)
backend/freeswitch_config/: vars.xml
backend/scripts/: certify_1000.py  check_groq_api.py  debug_voices.py  diagnose_llm_issue.py  loadtest_calls.py  parse_first_turn_baseline.py  realtime_smoke.py  seed_rbac.py  soak_runner.sh  testing_gemini.py  trunk_live_status_updater.py  verify_auth_stack.py
backend/systemd/: install-services.sh  talky-api.service  talky-cleanup.service  talky-cleanup.timer  talky-dialer-worker.service  talky-healthwatch.service  talky-healthwatch.timer  talky-reminder-worker.service  talky-voice-worker.service  talky.target
backend/tests/: test_api_security_day6.py  test_day7_call_guard.py  test_email_verification.py
backend/verifiers/: __init__.py  api_verifier.py  config_verifier.py  database_verifier.py  report_generator.py  smtp_verifier.py
backend/virtualEnv/: pyvenv.cfg
services/voice-gateway-cpp/: CMakeLists.txt  Dockerfile  README.md
(+1803 files in other folders)
